--- a/products-details.html
+++ b/products-details.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>LA Nature Juice</title>
+    <title>LA Nature's Juice</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="main.js"></script>
+     
 </head>
 <body>
         <a href="index.html">Home</a> &nbsp;- &nbsp;
